tests/integration/snapshots/integration_test__integration__snapshot_tests__diff_identical.snap
---
source: tests/integration/snapshot_tests.rs
expression: clean_output
---
No changes between snapshots
