tests/integration/snapshots/integration_test__integration__snapshot_tests__diff_json.snap
---
source: tests/integration/snapshot_tests.rs
expression: parsed
---
base:
  manifest_count: 2
  ref: parent
  snapshot_id: 1234567890
  timestamp: "2023-12-18 16:00:00 UTC"
diff:
  added_paths:
    - metadata/manifest-001.avro
  manifests_added: 1
  manifests_removed: 0
  removed_paths: []
reference:
  manifest_count: 3
  ref: current
  snapshot_id: 1234567899
  timestamp: "2023-12-19 16:00:00 UTC"
