tests/integration/snapshots/integration_test__integration__snapshot_tests__history_empty.snap
---
source: tests/integration/snapshot_tests.rs
expression: clean_output
---
No history entries found.
