tests/integration/snapshots/integration_test__integration__snapshot_tests__ls_namespaces_empty.snap
---
source: tests/integration/snapshot_tests.rs
expression: clean_output
---
empty-catalog (0)
└── (empty)
