tests/integration/snapshots/integration_test__integration__snapshot_tests__ls_namespaces_json.snap
---
source: tests/integration/snapshot_tests.rs
expression: parsed
---
catalog: catalog
namespaces:
  - prod
  - staging
