tests/integration/snapshots/integration_test__integration__snapshot_tests__ls_namespaces_tree.snap
---
source: tests/integration/snapshot_tests.rs
expression: clean_output
---
my-catalog (5)
├── production
├── production.analytics
├── production.ml
├── staging
└── development
