tests/integration/snapshots/integration_test__integration__snapshot_tests__ls_tables_empty.snap
---
source: tests/integration/snapshot_tests.rs
expression: clean_output
---
catalog.empty-ns (0)
└── (empty)
