tests/integration/snapshots/integration_test__integration__snapshot_tests__ls_tables_json.snap
---
source: tests/integration/snapshot_tests.rs
expression: parsed
---
catalog: catalog
namespace: namespace
tables:
  - table1
  - table2
