tests/integration/snapshots/integration_test__integration__snapshot_tests__ls_tables_tree.snap
---
source: tests/integration/snapshot_tests.rs
expression: clean_output
---
my-catalog.analytics (4)
├── events
├── users
├── transactions
└── sessions
